GPv3+GeoNode: Crashes when moving point(s) in 'Edit Mode' with a GeoNode applied #118404

Closed
opened 2024-02-17 04:33:56 +01:00 by luckyrobster · 2 comments

System Information
Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-16 21:52, hash: 8b6d145a6b04
Worked: N/A

Short description of error
The 'GPv3 + Geo Node = CRASHES' saga continues.
When moving the point(s) in 'Edit Mode' after applying a Geo Node component, crashes.
Works without Geo Node, however.

Exact steps for others to reproduce the error

  1. Create a blank Grease Pencil (v3) object
  2. Draw something and go to the 'Edit Mode'
  3. Try move any point by pressing 'G'
  4. Then make a new Geometry Node and add any node to connect to GP's output
  5. Repeat Step 3
**System Information** Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-16 21:52, hash: `8b6d145a6b04` Worked: N/A **Short description of error** The 'GPv3 + Geo Node = CRASHES' saga continues. When moving the point(s) in 'Edit Mode' after applying a Geo Node component, crashes. Works without Geo Node, however. **Exact steps for others to reproduce the error** 1. Create a blank Grease Pencil (v3) object 2. Draw something and go to the 'Edit Mode' 3. Try move any point by pressing 'G' 4. Then make a new Geometry Node and add any node to connect to GP's output 5. Repeat Step 3
luckyrobster added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-17 04:33:56 +01:00

Maybe crash reason is similar to #104011

Maybe crash reason is similar to #104011
Member

@filedescriptor : 0a45acbe3b uses the evaluated object in transform code [which I think is wrong -- it could be any geometry in ob->data, not just GreasePencil]

@filedescriptor : 0a45acbe3b501e38791373460c50a57e1c6089e5 uses the evaluated object in transform code [which I think is wrong -- it could be any geometry in `ob->data`, not just `GreasePencil`]
Falk David added this to the Grease Pencil project 2024-02-21 16:11:13 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-21 16:24:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118404
No description provided.